--- a/index.html
+++ b/index.html
@@ -10,48 +10,32 @@
     <header class="header">
         <nav class="header_menu">
             <img class="header_menu_logo" src="/Assets/Logo.png" alt="Logotipo de Alura">
-
         </nav>
     </header>
     <main class="desktop">
-        
-        <!--<section class="desktop_contenido">
-            <textarea class="desktop_contenido_text-area" cols="30" rows="10" placeholder="Ingrese el texto aquí"></textarea>
-            <div class="desktop_contenido_informacion">
-                <h6 class="desktop_informacion_texto">Solo letras minúsculas y sin acentos</h6>
-            </div>
-            <div class="desktop_contenido_botones">
-                <button class="desktop_contenido_botones_encriptar">Encriptar</button>
-                <button class="desktop_contenido_botones_desencriptar">Desencriptar</button>
-            </div>
-        </section>
-        <section class="desktop_mensaje">
-            <textarea class="desktop_mensaje_informativo" cols="20" rows="10"></textarea>
-            <div class="desktop_mensaje_botones">
-                <button class="desktop_contenido_botones_copiar">Copiar</button>
-            </div>
-        </section>-->
-
         <section class="desktop_contenido">
             <textarea id="input-text" class="desktop_contenido_text-area" cols="30" rows="10" placeholder="Ingrese el texto aquí"></textarea>
             <div class="desktop_contenido_informacion">
                 <h6 class="desktop_informacion_texto">Solo letras minúsculas y sin acentos</h6>
             </div>
             <div class="desktop_contenido_botones">
-                <button class="desktop_contenido_botones_encriptar">Encriptar</button>
-                <button class="desktop_contenido_botones_desencriptar">Desencriptar</button>
+                <button class="desktop_contenido_botones_encriptar" onclick="btnEncriptar()">Encriptar</button>
+                <button class="desktop_contenido_botones_desencriptar" onclick="btnDesencriptar()">Desencriptar</button>
             </div>
         </section>
         <section class="desktop_mensaje">
-            <textarea id="output-message" class="desktop_mensaje_informativo" cols="20" rows="10"></textarea>
-            <div class="desktop_mensaje_botones">
-                <button class="desktop_contenido_botones_copiar">Copiar</button>
+            <div id="output-container">
+                <textarea id="output-message" class="desktop_mensaje_resultado" cols="20" rows="10"></textarea>
+                <img class="desktop_mensaje_imagen" src="/Assets/Muñeco.png" alt="Muñeco buscando tu texto">
+                <h5 class="desktop_mensaje-faltamensaje">Ningún mensaje fue encontrado</h5>
+                <p class="desktop_mensaje_faltatexto">Ingresa el texto que desees encriptar o desencriptar.</p>
+                <div class="desktop_mensaje_boton">
+                    <button id="copy-button" class="desktop_contenido_botones_copiar" onclick="copiarTexto()">Copiar</button>
+                </div>
             </div>
         </section>
-
     </main>
-    <footer>
-
-    </footer>
+    <footer></footer>
+    <script src="/script.js"></script>
 </body>
 </html>
