Mejoras en el HTML, incorporación de nueva lógica de ocultar elementos junto a el botón de "copiar", diseño completamente adaptable a los diferentes tipos de pantalla y colores modificados.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <section class="desktop_contenido">
             <textarea id="input-text" class="desktop_contenido_text-area" cols="30" rows="10" placeholder="Ingrese el texto aquí"></textarea>
             <div class="desktop_contenido_informacion">
+                <img class="desktop_contenido_icono" src="/Assets/bi_exclamation-circle-fill.png" alt="Singo de explamación">
                 <h6 class="desktop_informacion_texto">Solo letras minúsculas y sin acentos</h6>
             </div>
             <div class="desktop_contenido_botones">
